test/Dialect/LLZK/unifiable_cast_fail.llzk
// RUN: llzk-opt -split-input-file -verify-diagnostics %s

module attributes {veridise.lang = "llzk"} {
  llzk.struct @Tester<[@S0, @S1]> {
    function.def @compute(%0: index) -> !llzk.struct<@Tester<[@S0, @S1]>> {
      %self = llzk.new_struct : <@Tester<[@S0, @S1]>>
      // expected-error@+1 {{'llzk.unifiable_cast' op input type 'index' and output type '!felt.felt' are not unifiable}}
      %r0 = llzk.unifiable_cast %0 : (index) -> !felt.felt
      function.return %self : !llzk.struct<@Tester<[@S0, @S1]>>
    }
    function.def @constrain(%self: !llzk.struct<@Tester<[@S0, @S1]>>, %0: index) {
      function.return
    }
  }
}

// -----

module attributes {veridise.lang = "llzk"} {
  llzk.struct @Tester<[@S0, @S1]> {
    function.def @compute(%1: i1) -> !llzk.struct<@Tester<[@S0, @S1]>> {
      %self = llzk.new_struct : <@Tester<[@S0, @S1]>>
      // expected-error@+1 {{'llzk.unifiable_cast' op input type 'i1' and output type 'index' are not unifiable}}
      %r1 = llzk.unifiable_cast %1 : (i1) -> index
     function.return %self : !llzk.struct<@Tester<[@S0, @S1]>>
    }
    function.def @constrain(%self: !llzk.struct<@Tester<[@S0, @S1]>>, %1: i1) {
      function.return
    }
  }
}


// -----

module attributes {veridise.lang = "llzk"} {
  llzk.struct @Tester<[@S0, @S1]> {
    function.def @compute(%2: !felt.felt) -> !llzk.struct<@Tester<[@S0, @S1]>> {
      %self = llzk.new_struct : <@Tester<[@S0, @S1]>>
      // expected-error@+1 {{'llzk.unifiable_cast' op input type '!felt.felt' and output type '!string.string' are not unifiable}}
      %r2 = llzk.unifiable_cast %2 : (!felt.felt) -> !string.string
      function.return %self : !llzk.struct<@Tester<[@S0, @S1]>>
    }
    function.def @constrain(%self: !llzk.struct<@Tester<[@S0, @S1]>>, %2: !felt.felt) {
      function.return
    }
  }
}

// -----

module attributes {veridise.lang = "llzk"} {
  llzk.struct @T1<[]> {
    function.def @compute() -> !llzk.struct<@T1<[]>> {
      %self = llzk.new_struct : <@T1<[]>>
      function.return %self : !llzk.struct<@T1<[]>>
    }
    function.def @constrain(%self : !llzk.struct<@T1<[]>>) {
      function.return
    }
  }
  llzk.struct @T2<[@N]> {
    function.def @compute() -> !llzk.struct<@T2<[@N]>> {
      %self = llzk.new_struct : <@T2<[@N]>>
      function.return %self : !llzk.struct<@T2<[@N]>>
    }
    function.def @constrain(%self : !llzk.struct<@T2<[@N]>>) {
      function.return
    }
  }
  llzk.struct @Tester<[@S0, @S1]> {
    function.def @compute(%3: !llzk.struct<@T1<[]>>) -> !llzk.struct<@Tester<[@S0, @S1]>> {
      %self = llzk.new_struct : <@Tester<[@S0, @S1]>>
      // expected-error@+1 {{'llzk.unifiable_cast' op input type '!llzk.struct<@T1<[]>>' and output type '!llzk.struct<@T2<[@S0]>>' are not unifiable}}
      %r3 = llzk.unifiable_cast %3 : (!llzk.struct<@T1<[]>>) -> !llzk.struct<@T2<[@S0]>>
      function.return %self : !llzk.struct<@Tester<[@S0, @S1]>>
    }
    function.def @constrain(%self: !llzk.struct<@Tester<[@S0, @S1]>>, %3: !llzk.struct<@T1<[]>>) {
      function.return
    }
  }
}

// -----

module attributes {veridise.lang = "llzk"} {
  llzk.struct @T2<[@N]> {
    function.def @compute() -> !llzk.struct<@T2<[@N]>> {
      %self = llzk.new_struct : <@T2<[@N]>>
      function.return %self : !llzk.struct<@T2<[@N]>>
    }
    function.def @constrain(%self : !llzk.struct<@T2<[@N]>>) {
      function.return
    }
  }
  llzk.struct @Tester<[@S0, @S1]> {
    function.def @compute(%4: !llzk.struct<@T2<[1]>>) -> !llzk.struct<@Tester<[@S0, @S1]>> {
      %self = llzk.new_struct : <@Tester<[@S0, @S1]>>
      // expected-error@+1 {{'llzk.unifiable_cast' op input type '!llzk.struct<@T2<[1]>>' and output type '!llzk.struct<@T2<[!felt.felt]>>' are not unifiable}}
      %r4 = llzk.unifiable_cast %4 : (!llzk.struct<@T2<[1]>>) -> !llzk.struct<@T2<[!felt.felt]>>
      function.return %self : !llzk.struct<@Tester<[@S0, @S1]>>
    }
    function.def @constrain(%self: !llzk.struct<@Tester<[@S0, @S1]>>, %4: !llzk.struct<@T2<[1]>>) {
      function.return
    }
  }
}


// -----

#map1 = affine_map<()[s0, s1] -> (s0 + s1)>
module attributes {veridise.lang = "llzk"} {
  llzk.struct @T2<[@N]> {
    function.def @compute() -> !llzk.struct<@T2<[@N]>> {
      %self = llzk.new_struct : <@T2<[@N]>>
      function.return %self : !llzk.struct<@T2<[@N]>>
    }
    function.def @constrain(%self : !llzk.struct<@T2<[@N]>>) {
      function.return
    }
  }
  llzk.struct @Tester<[@S0, @S1]> {
    function.def @compute(%6: !llzk.struct<@T2<[index]>>) -> !llzk.struct<@Tester<[@S0, @S1]>> {
      %self = llzk.new_struct : <@Tester<[@S0, @S1]>>
      // expected-error@+1 {{'llzk.unifiable_cast' op input type '!llzk.struct<@T2<[index]>>' and output type '!llzk.struct<@T2<[affine_map<()[s0, s1] -> (s0 + s1)>]>>' are not unifiable}}
      %r6 = llzk.unifiable_cast %6 : (!llzk.struct<@T2<[index]>>) -> !llzk.struct<@T2<[#map1]>>
      function.return %self : !llzk.struct<@Tester<[@S0, @S1]>>
    }
    function.def @constrain(%self: !llzk.struct<@Tester<[@S0, @S1]>>, %6: !llzk.struct<@T2<[index]>>) {
      function.return
    }
  }
}

// -----

#map1 = affine_map<()[s0, s1] -> (s0 + s1)>
module attributes {veridise.lang = "llzk"} {
  llzk.struct @T2<[@N]> {
    function.def @compute() -> !llzk.struct<@T2<[@N]>> {
      %self = llzk.new_struct : <@T2<[@N]>>
      function.return %self : !llzk.struct<@T2<[@N]>>
    }
    function.def @constrain(%self : !llzk.struct<@T2<[@N]>>) {
      function.return
    }
  }
  llzk.struct @Tester<[@S0, @S1]> {
    function.def @compute(%7: !llzk.struct<@T2<[!felt.felt]>>) -> !llzk.struct<@Tester<[@S0, @S1]>> {
      %self = llzk.new_struct : <@Tester<[@S0, @S1]>>
      // expected-error@+1 {{'llzk.unifiable_cast' op input type '!llzk.struct<@T2<[!felt.felt]>>' and output type '!llzk.struct<@T2<[1234]>>' are not unifiable}}
      %r7 = llzk.unifiable_cast %7 : (!llzk.struct<@T2<[!felt.felt]>>) -> !llzk.struct<@T2<[1234]>>
      function.return %self : !llzk.struct<@Tester<[@S0, @S1]>>
    }
    function.def @constrain(%self: !llzk.struct<@Tester<[@S0, @S1]>>) {
      function.return
    }
  }
}

// -----

#map1 = affine_map<()[s0, s1] -> (s0 + s1)>
module attributes {veridise.lang = "llzk"} {
  llzk.struct @T2<[@N]> {
    function.def @compute() -> !llzk.struct<@T2<[@N]>> {
      %self = llzk.new_struct : <@T2<[@N]>>
      function.return %self : !llzk.struct<@T2<[@N]>>
    }
    function.def @constrain(%self : !llzk.struct<@T2<[@N]>>) {
      function.return
    }
  }
  llzk.struct @T3<[@A, @B, @C, @D, @E]> {
    function.def @compute() -> !llzk.struct<@T3<[@A, @B, @C, @D, @E]>> {
      %self = llzk.new_struct : <@T3<[@A, @B, @C, @D, @E]>>
      function.return %self : !llzk.struct<@T3<[@A, @B, @C, @D, @E]>>
    }
    function.def @constrain(%self : !llzk.struct<@T3<[@A, @B, @C, @D, @E]>>) {
      function.return
    }
  }
  llzk.struct @Tester<[@S0, @S1]> {
    function.def @compute(%18: !llzk.struct<@T3<[1, 1, @S0, 1, !llzk.struct<@T2<[1]>>]>>) -> !llzk.struct<@Tester<[@S0, @S1]>> {
      %self = llzk.new_struct : <@Tester<[@S0, @S1]>>
      // expected-error@+1 {{'llzk.unifiable_cast' op input type '!llzk.struct<@T3<[1, 1, @S0, 1, !llzk.struct<@T2<[1]>>]>>' and output type '!llzk.struct<@T3<[!string.string, affine_map<()[s0, s1] -> (s0 + s1)>, 1, @S0, !llzk.struct<@T2<[affine_map<()[s0, s1] -> (s0 + s1)>]>>]>>' are not unifiable}}
      %19 = llzk.unifiable_cast %18 : (!llzk.struct<@T3<[1, 1, @S0, 1, !llzk.struct<@T2<[1]>>]>>) -> !llzk.struct<@T3<[!string.string, #map1, 1, @S0, !llzk.struct<@T2<[#map1]>>]>>
      function.return %self : !llzk.struct<@Tester<[@S0, @S1]>>
    }
    function.def @constrain(%self: !llzk.struct<@Tester<[@S0, @S1]>>, %18: !llzk.struct<@T3<[1, 1, @S0, 1, !llzk.struct<@T2<[1]>>]>>) {
      function.return
    }
  }
}
